Borrow and Edited
Thanks to this person.
Source: https://bootsnipp.com/snippets/xpyz9

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 
                 </div>
                 <div class="avatar">
-                    <img alt="" src="http://lorempixel.com/100/100/people/9/">
+                    <img alt="" src="https://scontent.fbkk5-8.fna.fbcdn.net/v/t1.0-1/p160x160/26112243_1148835258581134_345298373819888458_n.jpg?_nc_cat=106&amp;_nc_ht=scontent.fbkk5-8.fna&amp;oh=09f03ca4747d286557fc5ef29bf565df&amp;oe=5D393D8D">
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="https://scripteden.com/">Script Eden</a>
+                        <a target="_blank" href="https://www.facebook.com/photo.php?fbid=1148835258581134&amp;set=a.101730173291653&amp;type=3&amp;source=11&amp;referrer_profile_id=100003640112491">Siwakorn Boonpamee</a>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">60010986</div>
+                    <div class="desc">Computer Engineering</div>
+                    <div class="desc">KMITL</div>
                 </div>
                 <div class="bottom">
-                    <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                    <a class="btn btn-primary btn-twitter btn-sm" href="">
                         <i class="fa fa-twitter"></i>
                     </a>
                     <a class="btn btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
+                       href="">
                         <i class="fa fa-google-plus"></i>
                     </a>
                     <a class="btn btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
+                       href="">
                         <i class="fa fa-facebook"></i>
                     </a>
-                    <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                    <a class="btn btn-warning btn-sm" rel="publisher" href="">
                         <i class="fa fa-behance"></i>
                     </a>
                 </div>
